--- a/package.json
+++ b/package.json
@@ -9,31 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^7.4.0",
-    "@mantine/dates": "^7.4.0",
-    "@mantine/hooks": "^7.4.0",
-    "@mantine/modals": "^7.4.0",
-    "@mantine/notifications": "^7.4.0",
-    "@mantine/spotlight": "^7.4.0",
-    "dayjs": "^1.11.10",
+    "@cloudinary/react": "1.11.2",
+    "@cloudinary/url-gen": "1.14.0",
+    "@hookform/resolvers": "3.3.3",
+    "@mantine/core": "7.4.0",
+    "@mantine/dates": "7.4.0",
+    "@mantine/hooks": "7.4.0",
+    "@mantine/modals": "7.4.0",
+    "@mantine/notifications": "7.4.0",
+    "@prisma/client": "5.7.1",
+    "@tabler/icons-react": "2.45.0",
+    "dayjs": "1.11.10",
     "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.2",
-    "react-hook-form-mantine": "^3.1.3"
+    "next-auth": "4.24.5",
+    "react": "18",
+    "react-dom": "18",
+    "react-hook-form": "7.46.1",
+    "react-hook-form-mantine": "3.1.3",
+    "slugify": "1.6.6",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "@types/node": "20",
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "autoprefixer": "10.0.1",
+    "eslint": "8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8.4.32",
-    "postcss-preset-mantine": "^1.12.3",
-    "postcss-simple-vars": "^7.0.1",
-    "prisma": "^5.7.1",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "postcss": "8.4.32",
+    "postcss-preset-mantine": "1.12.3",
+    "postcss-simple-vars": "7.0.1",
+    "prisma": "5.7.1",
+    "tailwindcss": "3.3.0",
+    "typescript": "5"
   }
 }
