--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "5.7.1",
     "@tabler/icons-react": "2.45.0",
     "dayjs": "1.11.10",
+    "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "next-auth": "4.24.5",
     "react": "18",
@@ -28,6 +29,7 @@
     "react-hook-form": "7.46.1",
     "react-hook-form-mantine": "3.1.3",
     "slugify": "1.6.6",
+    "tailwind-merge": "^2.2.0",
     "zod": "3.22.4"
   },
   "devDependencies": {
