handle ai search

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cloudinary/react": "1.11.2",
     "@cloudinary/url-gen": "1.14.0",
     "@hookform/resolvers": "3.3.3",
+    "@langchain/openai": "^0.0.14",
     "@mantine/core": "7.4.0",
     "@mantine/dates": "7.4.0",
     "@mantine/hooks": "7.4.0",
@@ -22,6 +23,7 @@
     "@tabler/icons-react": "2.45.0",
     "dayjs": "1.11.10",
     "framer-motion": "^10.18.0",
+    "langchain": "^0.1.20",
     "next": "14.0.4",
     "next-auth": "4.24.5",
     "react": "18",
